--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,83 @@
 /* scaffold */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .clearfix::after {
-    content: "";
-    display: table;
-    clear: both;
-  }
+  content: "";
+  display: table;
+  clear: both;
+}
 
 :root {
-    --black: #222222;
-    --grey: #4a4a4a;
-    --red: #cb2d30;
-    --white: #ffffff;
-    --green: #4ac800;
+  --black: #000000;
+  --grey: #222222;
+  --grey-light: #4a4a4a;
+  --red: #cb2d30;
+  --white: #ffffff;
+  --green: #4ac800;
+}
+
+.debug {
+  border: 1px solid var(--black);
+  min-height: 100px;
+  min-width: 100px;
 }
 
 body {
-    background-color: var(--white);
-    font-family: Verdana, Tahoma, sans-serif;
+  background-color: var(--black);
+  font-family: Verdana, Tahoma, sans-serif;
+  color: var(--white);
+}
+
+header {
+    width: 100%;
+    height: 70px;
+    background-color: var(--black);
+}
+
+main{
+    background-color: #ffffff;
+    width: 80%;
+    margin: 0 auto;
+    height: calc(100vh - 180px);
+}
+
+footer {
+    width: 100%;
+    height: 80px;
+    background-color: var(--grey);
+}
+
+/* Header */
+
+.label-view {
+    background-color: var(--grey-light);
+    position: absolute;
+    right: 30px;
+    top: 5px;
+    padding: 2px 6px;
+    border-radius: 5px;
+}
+.label-view i{
+    margin-right: 2px;
+}
+
+.label-row {
+    background-color: var(--grey-light);
+    position: absolute;
+    right: 0px;
+    top: 5px;
+    padding: 2px 6px;
+    border-radius: 5px;
+}
+
+
+
+/* card */
+
+.card{
+    display: none;
 }
