--- a/css/style.css
+++ b/css/style.css
@@ -34,20 +34,20 @@ body {
 
 header {
     width: 100%;
-    height: 70px;
+    height: 60px;
     background-color: var(--black);
 }
 
 main{
-    background-color: #ffffff;
-    width: 80%;
+    width: 88%;
     margin: 0 auto;
-    height: calc(100vh - 180px);
+    height: calc(100vh - 140px);
 }
 
 footer {
+    margin-top:20px ;
     width: 100%;
-    height: 80px;
+    height: 60px;
     background-color: var(--grey);
 }
 
@@ -60,6 +60,7 @@ footer {
     top: 5px;
     padding: 2px 6px;
     border-radius: 5px;
+    font-size: 10px;
 }
 .label-view i{
     margin-right: 2px;
@@ -72,12 +73,42 @@ footer {
     top: 5px;
     padding: 2px 6px;
     border-radius: 5px;
+    font-size: 10px;
 }
 
+/* main */
+.container-main{
+    width: 100%;
+    height: 100%;
+}
 
+.flex-box{
+    display: flex;
+    flex-flow: row wrap ;
+    justify-content: space-between;
+    align-items: center;
+}
 
 /* card */
 
 .card{
-    display: none;
+    position: relative;
+    background-color: #ffffff;
+    width: calc((100% - 30px) / 7);
+    height: calc((100% - 50px) / 5);
+}
+
+.card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.label-card{
+    font-size: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background-color: rgb(74,74,74, 0.8);
+    padding: 4px 4px;
 }
